all files added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=my:project
-sonar.projectName=My project
+sonar.projectKey=pradeep_poc
+sonar.projectName=pradeep_poc
 sonar.projectVersion=1.0
  
 # Path to the parent source code directory.
@@ -17,3 +17,4 @@ sonar.my.property=value
 sonar.doxygen.generateDocumentation=enable
 
 sonar.log.level=DEBUG
+#sonar.exclusions=hs_err_pid12188, src\main\resources\hibernate.cfg.xml
