--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,14 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <url>http://maven.apache.org</url>
-      <properties>
+<properties>
      	
-     	<sonar.jdbc.url>
-	jdbc:mysql://localhost:3306/sonar
-    	 </sonar.jdbc.url>
+     	<sonar.jdbc.url>jdbc:mysql://172.27.59.158:3306</sonar.jdbc.url>
      	<sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
-     	<sonar.jdbc.username>root</sonar.jdbc.username>
-     	<sonar.jdbc.password>root</sonar.jdbc.password>
+     	<sonar.jdbc.username>sonar</sonar.jdbc.username>
+     	<sonar.jdbc.password>sonar</sonar.jdbc.password>
     	
-     	<sonar.host.url>http://172.27.59.105:9000/sonar</sonar.host.url>
+     	<sonar.host.url>http://172.27.59.22:9080</sonar.host.url>
      </properties>
 
   
@@ -204,7 +202,7 @@
 </plugin>-->
 
 
-<!-- <plugin> 
+ <plugin> 
       <groupId>org.codehaus.mojo</groupId>
    <artifactId>sonar-maven-plugin</artifactId>
    <version>2.4</version>
@@ -217,7 +215,7 @@
            </goals>
        </execution>
     </executions>
-     </plugin>-->
+     </plugin>
 <!-- <plugin> -->
 <!-- <artifactId>maven-assembly-plugin</artifactId>
 <configuration>
